--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit  "ツイートの作成" %>
+    <%= form.submit  sentence_choose_new_or_edit %>
   </div>
 <% end %>
