--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Content:</strong>
+  <strong>内容:</strong>
   <%= @tweet.content %>
 </p>
 
-<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
-<%= link_to 'Back', tweets_path %>
+<%= link_to 'ツイートを編集する', edit_tweet_path(@tweet) %> |
+<%= link_to '戻る', tweets_path %>
