コメントの削除

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -38,23 +38,24 @@ div.actions {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: #fff;
   display: table; }
 
 #error_explanation {
   width: 450px;
-  border: 2px solid red;
+  border: 2px solid pink;
   padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0; }
 
 #error_explanation h2 {
+  text-shadow: 1px 2px 3px #633324;
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
   font-size: 12px;
   margin: -7px -7px 0;
-  background-color: #c00;
+  background-color: #f5d3dd;
   color: #fff; }
 
 #error_explanation ul li {
