--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,9 +1,13 @@
 <%= render 'header' %>
 
-<h1>新しいツイート</h1>
 
-<%= render 'form', tweet: @tweet %>
+<div id = "body">
+  <h1>新しいツイート</h1>
 
-<%= link_to '戻る', tweets_path %>
+  <%= render 'form', tweet: @tweet %>
+
+  <%= link_to '戻る', tweets_path %>  
+</div>
+
 
 <%= render 'footer' %>
