--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,13 +1,17 @@
 <%= render 'header' %>
 
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>内容:</strong>
-  <%= @tweet.content %>
-</p>
+<div id = "body">
+  <p id="notice"><%= notice %></p>
 
-<%= link_to 'ツイートを編集する', edit_tweet_path(@tweet) %> |
-<%= link_to '戻る', tweets_path %>
+  <p>
+    <strong>内容:</strong>
+    <%= @tweet.content %>
+  </p>
+
+  <%= link_to 'ツイートを編集する', edit_tweet_path(@tweet) %> |
+  <%= link_to '戻る', tweets_path %>
+
+</div>
 
 <%= render 'footer' %>
